# getsys

./: Cargo.toml  LICENSE  README.md
examples/: bat.rs  cpu.rs  percpu.rs  turbo.rs
src/: cpu.rs  lib.rs  percpu.rs  util.rs  utils.rs
